content added to movie-list

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
-
+$body-bg: #B8BFC3;
+body{
+    background: $body-bg;
+}
 @import '../node_modules/bootstrap/scss/bootstrap.scss'
 /* You can add global styles to this file, and also import other style files */
