--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,1 +1,23 @@
-<p>movie-list works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12 p-4">
+            POPULAR MOVIES
+        </div>
+        <hr>
+        <div class="col-lg-4">
+            <div class="card">
+                    MOVIE 1
+            </div>
+        </div>
+        <div class="col-lg-4">
+                <div class="card">
+                        MOVIE 2
+                </div>
+            </div>
+            <div class="col-lg-4">
+                    <div class="card">
+                            MOVIE 3
+                    </div>
+                </div>
+    </div>
+</div>
