--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,7 @@
 $body-bg: #B8BFC3;
 body{
     background: $body-bg;
+    scroll-behavior: smooth;
 }
 @import '../node_modules/bootstrap/scss/bootstrap.scss'
 /* You can add global styles to this file, and also import other style files */
