--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,22 @@
-<p>footer works!</p>
+<footer>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-3">
+                Content 1
+            </div>
+            <div class="col-lg-3">
+                    Content 1
+            </div>
+            <div class="col-lg-3">
+                    Content 1
+            </div>
+            <div class="col-lg-3">
+                    Content 1
+            </div>
+        </div>
+    </div>
+   
+</footer>
+<div class="col-lg-12 bg-dark p-2 d-flex">
+        <span class="text-center text-white m-auto">Hand Crafted with ________ By Joshua Olajide</span>
+    </div>
