--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,9 +3,9 @@
         <div class="row d-flex justify-content-between">
             
                 <div class="logo ">
-                    <h3> MINI FLIX  </h3>
+                    <h3 class="text-danger"> MINI FLIX  </h3>
                 </div>
-                <button class="btn btn-primary float-right">
+                <button class="btn btn-sm btn-danger btn-small float-right">
                     Sign In
                 </button>
             
