--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,8 +1,8 @@
 <div class="banner d-flex">
 
-        <div class="col-lg-6 m-auto">
-                <h1 class="text-white">Mini Flix</h1>
-                <p class="text-white">A place to get your favourite movies</p>
+        <div class="col-lg-6 m-auto lift">
+                <h1 class="text-danger">Mini Flix</h1>
+                <p class="text-white">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
                 <div class="input-group mb-3 m-auto">
                         <div class="input-group-prepend">
                           <button class="btn btn-primary" id="basic-addon1">SEARCH</button>
