Updated footer and added subscribe text box

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,18 +1,49 @@
 <footer>
     <div class="container">
-        <div class="row">
+            <div class="row p-4">
+                    <div class="col-lg-4">
+                        <p>
+                            Subscribe to our Newsletter to get the latest info on New releases and so on.
+                        </p>
+                    </div>
+                    <div class="col-lg-8">
+                            <div class="input-group mb-3 m-auto">
+                                    
+                                    <input type="text" class="form-control" placeholder="Search for your favourite movies" aria-label="Username" aria-describedby="basic-addon1">
+                                    <div class="input-group-append">
+                                            <button class="btn btn-danger" id="basic-addon1">Subscribe</button>
+                                     </div>
+                            </div>
+                    </div>
+                </div>
+    </div>
+    <div class="container">
+        
+        <div class="row p-4">
             <div class="col-lg-3">
-                Content 1
+                <p class="text-secondary">SOCIAL LINKS</p>
+                <hr>
+                <p></p>
+                <p></p>
+                <p></p>
+
             </div>
             <div class="col-lg-3">
-                    Content 1
+                    <p class="text-secondary">GET INVOLVED</p>
+                    <hr>
+                    
             </div>
             <div class="col-lg-3">
-                    Content 1
+                   <p class="text-secondary"> COMMUNITY </p>
+                  
             </div>
             <div class="col-lg-3">
-                    Content 1
-            </div>
+                    <p class="text-secondary"> LEGAL </p>
+                    <div class="input-group">
+                        <label for="subscribe"></label>
+                    </div>
+             </div>
+            
         </div>
     </div>
    
