--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -5,7 +5,7 @@
                 <p class="text-white">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
                 <div class="input-group mb-3 m-auto">
                         <div class="input-group-prepend">
-                          <button class="btn btn-primary" id="basic-addon1">SEARCH</button>
+                          <button class="btn btn-danger" id="basic-addon1">Search</button>
                         </div>
                         <input type="text" class="form-control" placeholder="Search for your favourite movies" aria-label="Username" aria-describedby="basic-addon1">
                 </div>
