--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -5,10 +5,11 @@ $h-100v: 100vh;
 $h-80v: 80vh;
 $h-60v: 60vh;
 $primary: blue;
+$red: #F40612;
 .banner{
     width: $w-full;
     height: $h-80v;
-    background:darken($color: $primary, $amount: 40%);;
+    background:darken($color: $primary, $amount: 40%);
 
     .lift{
         margin-top: -10px;
