--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,7 +1,7 @@
 <div class="container mb-5">
     <div class="row">
         <div class="col-lg-12 p-4">
-            POPULAR MOVIES
+            RECENT MOVIES
         </div>
         <hr>
         <div class="col-lg-4">
@@ -20,4 +20,27 @@
                     </div>
                 </div>
     </div>
+
+    <div class="row">
+        <div class="col-lg-12 p-4">
+            RECENT MOVIES
+        </div>
+        <hr>
+        <div class="col-lg-4">
+            <div class="card">
+                    MOVIE 1
+            </div>
+        </div>
+        <div class="col-lg-4">
+                <div class="card">
+                        MOVIE 2
+                </div>
+            </div>
+            <div class="col-lg-4">
+                    <div class="card">
+                            MOVIE 3
+                    </div>
+                </div>
+    </div>
+    
 </div>
