Modified hero component

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -29,7 +29,8 @@ header{
         color: $white;
 
         h3{
-            font-family: $font-poppins;
+            font-family: 'Abel', sans-serif;
+            font-weight: 900;
             
         }
     }
