--- a/src/app/movie-list/movie-list.component.scss
+++ b/src/app/movie-list/movie-list.component.scss
@@ -1,4 +1,5 @@
 $white: white;
+$dark: #000000;
 $r-5: 5px;
 $w-2: 2em;
 $w-3: 3em;
@@ -6,7 +7,7 @@ $w-5: 5em;
 $w-10: 10em;
 $h-10: 2em;
 .container{
-    background: $white;
+    background: $dark;
     margin-top: -$w-3;
     height: 500px;
     border-radius: $r-5;
