--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
 <app-hero></app-hero>
+<app-login></app-login>
 <app-movie-list></app-movie-list>
 <app-footer></app-footer>
