--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -49,5 +49,5 @@
    
 </footer>
 <div class="col-lg-12 bg-dark p-2 d-flex">
-        <span class="text-center text-white m-auto">Hand Crafted with ________ By Joshua Olajide</span>
+        <span class="text-center text-white m-auto">Hand Crafted with <i class="materia-icon">Love</i> By Joshua Olajide</span>
     </div>
