Added router links to the header component

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,4 @@
+
 <footer>
     <div class="container">
             <div class="row p-4">
@@ -49,5 +50,8 @@
    
 </footer>
 <div class="col-lg-12 bg-dark p-2 d-flex">
-        <span class="text-center text-white m-auto">Hand Crafted with <i class="materia-icon">Love</i> By Joshua Olajide</span>
+        <span class="text-center text-white m-auto">Hand Crafted with 
+                <i class="material-icons text-danger">favorite</i>
+            By Joshua Olajide</span>
     </div>
+    
