--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,11 +5,15 @@
                 <div class="logo ">
                     <h3 class="text-red"> MINI FLIX  </h3>
                 </div>
-                <button class="btn btn-sm btn-red btn-small float-right">
-                    Sign In
+                <a routerLink="/login" routerLinkActive="active">
+                <button class="btn btn-sm btn btn-danger float-right">
+                   Sign In
                 </button>
+                 </a>
             
         </div>
 
     </div>
 </header>
+
+<router-outlet></router-outlet>
