Added link to the logo to go back to the homepage

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,9 @@
         <div class="row d-flex justify-content-between">
             
                 <div class="logo ">
-                    <h3 class="text-red"> MINI FLIX  </h3>
+                    <a routerLink="/" routerLinkActive="active">
+                        <h3 class="text-red"> MINI FLIX  </h3>
+                    </a>
                 </div>
                 <a routerLink="/login" routerLinkActive="active">
                 <button class="btn btn-sm btn btn-danger float-right">
