--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -26,21 +26,49 @@
             RECENT MOVIES
         </div>
         <hr>
-        <div class="col-lg-4">
-            <div class="card">
-                    MOVIE 1
-            </div>
+        <div class="col-lg-2">
+                    <img 
+                    src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hu9sn5kHTXZsafNQYQf4qQ16BGI.jpg" alt="image-name" 
+                    class="img-fluid"
+                    />
+                    <p>Image name</p>
         </div>
-        <div class="col-lg-4">
-                <div class="card">
-                        MOVIE 2
-                </div>
-            </div>
-            <div class="col-lg-4">
-                    <div class="card">
-                            MOVIE 3
-                    </div>
-                </div>
+        
+       
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hu9sn5kHTXZsafNQYQf4qQ16BGI.jpg" alt="image-name" 
+            class="img-fluid"
+            />
+            <p>Image name</p>
+        </div>
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hu9sn5kHTXZsafNQYQf4qQ16BGI.jpg" alt="image-name" 
+            class="img-fluid"
+            />
+            <p>Image name</p>
+        </div>
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hu9sn5kHTXZsafNQYQf4qQ16BGI.jpg" alt="image-name" 
+            class="img-fluid" 
+            />
+            <p>Image name</p>
+        </div>
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w185_and_h278_bestv2/hu9sn5kHTXZsafNQYQf4qQ16BGI.jpg" alt="image-name" 
+            class="img-fluid" 
+            />
+            <p>Image name</p>
+        </div>
+        
+            
     </div>
     
 </div>
