--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,24 +1,53 @@
 <div class="container mb-5">
+    
     <div class="row">
         <div class="col-lg-12 p-4">
-            RECENT MOVIES
+            FAVOURITE MOVIES
         </div>
         <hr>
-        <div class="col-lg-4">
-            <div class="card">
-                    MOVIE 1
-            </div>
+        <div class="col-lg-2">
+                    <img 
+                    src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
+                    class="img-fluid"
+                    />
+                    <p>Image name</p>
         </div>
-        <div class="col-lg-4">
-                <div class="card">
-                        MOVIE 2
-                </div>
-            </div>
-            <div class="col-lg-4">
-                    <div class="card">
-                            MOVIE 3
-                    </div>
-                </div>
+        
+       
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
+            class="img-fluid"
+            />
+            <p>Image name</p>
+        </div>
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
+            class="img-fluid"
+            />
+            <p>Image name</p>
+        </div>
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
+            class="img-fluid" 
+            />
+            <p>Image name</p>
+        </div>
+
+        <div class="col-lg-2">
+            <img 
+            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
+            class="img-fluid" 
+            />
+            <p>Image name</p>
+        </div>
+        
+            
     </div>
 
     <div class="row">
