--- a/src/app/movie-list/movie-list.component.scss
+++ b/src/app/movie-list/movie-list.component.scss
@@ -14,4 +14,8 @@ $h-10: 2em;
     .row{
         justify-content: space-between;
     }
+    img {
+        width: 100%;
+        height: 200px;
+    }
 }
