Added white color to all text on hero component

--- a/src/app/movie-list/movie-list.component.scss
+++ b/src/app/movie-list/movie-list.component.scss
@@ -10,6 +10,7 @@ $h-10: 2em;
     background: $dark;
     margin-top: -$w-3;
     border-radius: $r-5;
+    color: $white;
 
     .row{
         justify-content: space-between;
