--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -9,10 +9,9 @@ $red: #F40612;
 .banner{
     width: $w-full;
     height: $h-80v;
-    background: #3A1C71;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #FFAF7B, #D76D77, #3A1C71); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-
+    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+	background-size: 400% 400%;
+	animation: gradientBG 15s ease infinite;
     h1{
         font-family: 'Abel', sans-serif;
     }
