--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -11,7 +11,20 @@ $red: #F40612;
     height: $h-80v;
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
 	background-size: 400% 400%;
-	animation: gradientBG 15s ease infinite;
+    animation: gradientBG 15s ease infinite;
+    
+    @keyframes gradientBG {
+        0% {
+            background-position: 0% 50%;
+        }
+        50% {
+            background-position: 100% 50%;
+        }
+        100% {
+            background-position: 0% 50%;
+        }
+    }
+    
     h1{
         font-family: 'Abel', sans-serif;
     }
