Changed the text to bold

--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -1,7 +1,7 @@
 <div class="banner d-flex">
 
         <div class="col-lg-6 m-auto lift">
-                <h1 class="text-white">Mini Flix.</h1>
+                <h1 class="text-white text-bold">Mini Flix.</h1>
                 
                 <p class="text-white">Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.</p>
                 <div class="input-group mb-3 m-auto">
