Made the text bolder

--- a/src/app/hero/hero.component.scss
+++ b/src/app/hero/hero.component.scss
@@ -27,6 +27,7 @@ $red: #F40612;
     
     h1{
         font-family: 'Abel', sans-serif;
+        font-weight: 900;
     }
     .lift{
         margin-top: -10px;
