--- a/src/app/movie-list/movie-list.component.html
+++ b/src/app/movie-list/movie-list.component.html
@@ -1,4 +1,4 @@
-<div class="container mb-5">
+<div class="container mb-5" *ngFor="let movie of movies">
     
     <div class="row">
         <div class="col-lg-12 p-4">
@@ -7,47 +7,11 @@
         <hr>
         <div class="col-lg-2">
                     <img 
-                    src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
+                    src="{{ movie.src }}" alt="{{ movie.name }}" 
                     class="img-fluid"
                     />
-                    <p>Image name</p>
+                    <p>{{ movie.name }}</p>
         </div>
-        
-       
-
-        <div class="col-lg-2">
-            <img 
-            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
-            class="img-fluid"
-            />
-            <p>Image name</p>
-        </div>
-
-        <div class="col-lg-2">
-            <img 
-            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
-            class="img-fluid"
-            />
-            <p>Image name</p>
-        </div>
-
-        <div class="col-lg-2">
-            <img 
-            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
-            class="img-fluid" 
-            />
-            <p>Image name</p>
-        </div>
-
-        <div class="col-lg-2">
-            <img 
-            src="https://image.tmdb.org/t/p/w500_and_h282_face/dKxkwAJfGuznW8Hu0mhaDJtna0n.jpg" alt="image-name" 
-            class="img-fluid" 
-            />
-            <p>Image name</p>
-        </div>
-        
-            
     </div>
 
     <div class="row">
